Bug 1729656 [Wayland] Don't use gfxPlatform to configure DMABuf, r=rmader

Differential Revision: https://phabricator.services.mozilla.com/D126821