gfx/thebes/gfxPlatform.h
@@ -797,7 +797,6 @@ class gfxPlatform : public mozilla::layers::MemoryPressureListener {
   virtual void EnsureDevicesInitialized(){};
   virtual bool DevicesInitialized() { return true; };
 
-  virtual bool UseDMABufWebGL() { return false; }
   virtual bool IsWaylandDisplay() { return false; }
 
   static uint32_t TargetFrameRate();
